--- a/Lessons/1-Introduction/presentation/references.bib
+++ b/Lessons/1-Introduction/presentation/references.bib
@@ -1,8 +1,113 @@
-@misc{kwiatkowski2020,
-  author = {Robert Kwiatkowski},
-  title = {Gradient Descent Algorithm: A Deep Dive},
-  url = {https://towardsdatascience.com/gradient-descent-algorithm-a-deep-dive-cf04e8115f21},
-  year = {2020}
+@misc{anscombe2011,
+  author = {Anscombe.svg: Schutz(label using subscripts): Avenue},
+  title = {Simple Linear Regression},
+  year = {2011},
+  note = {CC BY-SA 3.0},
+  url = {https://commons.wikimedia.org/w/index.php?curid=9838454}
+}
+
+@misc{canley2021,
+  author = {Canley},
+  title = {Binomial Logistic Regression},
+  year = {2021},
+  note = {CC BY-SA 4.0},
+  url = {https://commons.wikimedia.org/w/index.php?curid=116449187}
+}
+
+@misc{blackdragon2015,
+  author = {Black Dragon},
+  title = {Decision Tree},
+  year = {2015},
+  note = {Source: Stack Overflow},
+  url = {https://stackoverflow.com/questions/31786347/how-to-make-python-decision-tree-more-understandable}
+}
+
+@misc{ajanki2008,
+  author = {Antti Ajanki AnAj},
+  title = {k-NN Classification},
+  year = {2008},
+  note = {CC BY-SA 3.0},
+  url = {https://commons.wikimedia.org/w/index.php?curid=2170282}
+}
+
+@misc{zirguezi2015,
+  author = {Original: Alisneaky, Vector: Zirguezi},
+  title = {SVM kernel trick: map features to a higher dimensional space to be able to separate classes using a hyperplane},
+  year = {2015},
+  note = {CC BY-SA 4.0},
+  url = {https://commons.wikimedia.org/w/index.php?curid=47868867}
+}
+
+@misc{chire_kmeans,
+  author = {Chire},
+  title = {k-Means Clustering convergence process},
+  year = {2017},
+  note = {CC BY-SA 4.0},
+  url = {https://commons.wikimedia.org/w/index.php?curid=59409335}
+}
+
+@misc{sideris2005,
+  author = {Stathis Sideris, derivative work: Mhbrugman},
+  title = {Hierarchical Clustering},
+  year = {2005},
+  note = {CC BY-SA 3.0},
+  url = {https://commons.wikimedia.org/w/index.php?curid=7344806}
+}
+
+@misc{chire_dbscan_illustration,
+  author = {Chire},
+  title = {DBSCAN Illustration},
+  year = {2013},
+  note = {CC BY-SA 3.0},
+  url = {https://commons.wikimedia.org/w/index.php?curid=17045963}
+}
+
+@misc{chire_dbscan_result,
+  author = {Chire},
+  title = {DBSCAN Result},
+  year = {2013},
+  note = {CC BY-SA 3.0},
+  url = {https://commons.wikimedia.org/w/index.php?curid=17085332}
+}
+
+@misc{nicoguaro2015,
+  author = {Nicoguaro},
+  title = {PCA Illustration},
+  year = {2015},
+  note = {CC BY 4.0},
+  url = {https://commons.wikimedia.org/w/index.php?curid=46871195}
+}
+
+@misc{mcdonald2017,
+  author = {Kyle McDonald},
+  title = {t-SNE Result on MNIST dataset},
+  year = {2017},
+  note = {CC BY 2.0},
+  url = {https://commons.wikimedia.org/w/index.php?curid=115726949}
+}
+
+@misc{megajuice2017,
+  author = {Megajuice},
+  title = {Own work},
+  url = {https://commons.wikimedia.org/w/index.php?curid=57895741},
+  year = {2017},
+  note = {CC0}
+}
+
+@misc{learndatasci2018,
+  author = {LearnDataSci},
+  title = {Own work - Article},
+  url = {https://commons.wikimedia.org/w/index.php?curid=69947708},
+  year = {2018},
+  note = {CC BY-SA 4.0}
+}
+
+@misc{gufosowa2019,
+  author = {Gufosowa},
+  title = {Cross-validation},
+  year = {2019},
+  note = {CC BY-SA 4.0},
+  url = {https://commons.wikimedia.org/w/index.php?curid=82298768}
 }
 
 @misc{geeksforgeeksfitting,
