Improved repo structure

--- a/Lessons/presentations/1-introduction/slides.qmd
+++ b/Lessons/presentations/1-introduction/slides.qmd
@@ -1,29 +1,9 @@
 ---
 title: "ML Course Part 1 - Introduction to Machine Learning"
-author: "Alexandre Bry"
 bibliography: references.bib
-csl: ../../numeric-superscript.csl
-slide-level: 3
-reference-location: document
-include-after-body: ../../include-after-body.html
 format:
   revealjs:
-    slideHeaders: true
-    smaller: true
-    slide-number: true
-    show-slide-number: all
-    css: [../../styles.css]
-    code-overflow: wrap
-    code-line-numbers: false
     header: "Introduction to Machine Learning"
-    sc-sb-title	: true
-    incremental: false
-    embed-resources: false
-    scrollable: true
-execute: 
-  echo: true
-filters:
-  - reveal-header
 ---
 
 # Introduction
@@ -61,7 +41,7 @@ ML Model
 
 ## Dataset
 
-### Dataset
+### Definition
 
 ::: {.definition-block}
 Dataset
